[package]
name = "p2p"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
tokio-tower = "0.6.0"
tower = "0.4.8"
async-bincode = "0.6.1"
bincode = "1.3.3"
tokio = { version = "1.11", features = ["full"] }
futures = { version = "0.3.17", default-features = false, features = ["std"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
log = "0.4.14"
anyhow = "1.0.43"
rand = "0.8.4"
sha2 = "0.9.8"
env_logger = "0.9.0"
